# Pocket

./: .gitignore  Cargo.toml  README.md  RELEASING.md  todo.txt
.github/workflows/: ci.yml  release.yml
docs/: crypto-params.md  external-signer.md  packaging-macos.md  packaging-windows.md  release-pipeline.md
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
src/: lib.rs  main.rs  p2p.rs
tests/: basic.rs  integration.rs  lantern_live.rs
