[package]
name = "pocket"
version = "0.1.0"
edition = "2021"
authors = ["5310S <dev@5310s.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
bech32 = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = { version = "2", features = ["rand"] }
thiserror = "1"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
dirs = "5"
